<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gracious Givers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="feedback">Feedback</string>
    <string name="how_would_you_best_describe_your_experience">How would you best describe your experience</string>
    <string name="how_can_we_better_your_experience">How can we better your experience?</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="please_enter_your_age">Please Enter Your Age</string>
    <string name="volunteer">Volunteer</string>
    <string name="please_enter_date">Please Enter Date</string>
    <string name="donate_now">DONATE NOW</string>
    <string name="find_out_more_about_gracious_givers">Find out more about Gracious Givers</string>
    <string name="payment_type">Payment Type</string>
    <string name="once_off">Once Off</string>
    <string name="monthly">Monthly</string>
    <string name="donation_amounts">Donation Amounts</string>
    <string name="r100">R100</string>
    <string name="r200">R200</string>
    <string name="r500">R500</string>
    <string name="r750">R750</string>
    <string name="send_a_message">Send a Message</string>
    <string name="pay_through">Pay Through</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_your_email_address_and_follow_instructions">Please enter your email address and follow instructions</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="company_account">Company Account</string>
    <string name="sign_up">Sign-Up</string>
    <string name="please_upload_relevant_documents">Please upload relevant documents</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="login_with_us">Login with Us</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign-In</string>
    <string name="login">LOGIN</string>
    <string name="login_with">Login With</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_with_us">Register with Us</string>
    <string name="our_purpose">Our Purpose</string>
    <string name="what_do_we_do">What do we do?</string>
    <string name="individual_account">Individual Account</string>
    <string name="register_with">Register With</string>
    <string name="account_type">ACCOUNT TYPE</string>
    <string name="what_type_of_user_are_you">What type of user are you?</string>
    <string name="i_am_individual_user">I AM INDIVIDUAL USER</string>
    <string name="we_are_a_company">WE ARE A COMPANY</string>
    <string name="hi">HI</string>
    <string name="insert_name">*Insert Name*</string>
    <string name="donate">DONATE</string>
    <string name="account">ACCOUNT</string>
    <string name="question_always_make_a_difference">Have you always wanted to make a difference in the community, but didn\'t know where to start? Why not join us? We have a spirit of service – All you need is Heart.</string>
    <string name="gracious_givers_ethos">At Gracious Givers, our ethos is based on hands-on volunteering. We firmly believe Action is so much more powerful than just feeling compassion and doing nothing about it.</string>
    <string name="make_a_positive_difference">Make a Positive Difference</string>
    <string name="volunteering_benefits">Volunteering Benefits?</string>
    <string name="volunteering_positive_difference">Volunteering is a powerful way to create positive change and leave a lasting impact on the world.</string>
    <string name="strengthen_your_cv">Strengthen your CV/Resume</string>
    <string name="cv_description">Upon request, we provide volunteers with a certificate of recognition. Use this as proof to show your participation in community service and grass roots projects – increase your creditability on your resume, job application or let it serve as a reminder of your efforts to change South Africa for the better.</string>
    <string name="outAndAbout">Get involved in changing South Africa on the ground, improving your confidence and self-esteem and being outdoors (most of the time) improving your physical and mental well-being.</string>
    <string name="build_and_share_your_skills">Build and Share your skills</string>
    <string name="get_out_and_about_in_the_community">Get out and about in the community</string>
    <string name="develop_new_skills_by_learning_from_others_put_your_skills_and_experience_to_use_with_our_projects_to_benefit_the_community_and_the_country_on_the_whole">Develop new skills by learning from others. Put your skills and experience to use with our projects to benefit the community and the country on the whole.</string>
    <string name="visit_our_what_do_we_do_page_to_fnd_out_more_about_the_volunteering_process">Visit our Our Purpose Page to find out more about the volunteering process</string>
    <string name="not_formally_funded" tools:ignore="StringFormatInvalid">Gracious Givers is not formally funded by the Government. We prefer it this way as we are 100% an organisation for the people by the people. We are able to do what we do through member contribution and donations.</string>
    <string name="gracious_givers_regular_initiatives_that_you_can_get_involved_with_as_a_volunteer">Gracious Givers regular initiatives that you can get involved with as a Volunteer.</string>
    <string name="thank_you_feedback">Thank you for being a part of our mission to make the world a better place. We greatly value your feedback, as it helps us improve our application and donor experience. Please take a moment to share your thoughts with us.</string>
    <string name="how_are_we_funded_and_how_do_we_afford_doing_what_we_do">How are we funded and how do we afford doing what we do?</string>
    <string name="how_can_you_donate">How can you donate?</string>
    <string name="regular_contributions">• Regular Contributions •</string>
    <string name="groceries_and_most_of_our_donors_pay_directly_into_the_organisations_bank_account_weekly_or_monthly">Groceries and most of our donors pay directly into the organisations bank account weekly or monthly.</string>
    <string name="event_sponsors">• Event Sponsors •</string>
    <string name="pick_an_initiative_and_contribute_specially_for_that_campaign_we_will_make_sure_your_funds_are_used_appropriately_and_specifically">Pick an initiative and contribute specially for that campaign. We will make sure your funds are used appropriately and specifically</string>
    <string name="yearly_sums">• Yearly sums •</string>
    <string name="yearly_lump_sum_payments_that_we_draw_on_throughout_the_year">Yearly lump sum payments that we draw on throughout the year</string>
    <string name="ad_hoc_donations">• Ad Hoc Donations •</string>
    <string name="ad_hoc_donations_as_an_when_you_see_fit">•\tAd Hoc donations as an when you see fit</string>
    <string name="alternatively">• Alternatively •</string>
    <string name="you_can_also_contribute_through_donations_of_grocery_products_blankets_clothing_stationary_or_school_shoes_recommendations_on_other_products_are_also_welcome_contact_us_for_specific_product_donation_and_we_can_share_our_database_of_beneficiaries_so_that_no_donations_go_to_waste">You can also contribute through donations of grocery products, blankets, clothing, stationary or school shoes. Recommendations on other products are also welcome. Contact us for specific product donation and we can share our database of beneficiaries so that no donations go to waste.</string>
    <string name="please_note">• PLEASE NOTE •</string>
    <string name="we_do_not_recommend_cash_donations_deposits_through_our_official_bank_account_allows_us_to_track_all_receipts_from_our_generous_donors">We do not recommend cash donations – deposits through our official bank account allows us to track all receipts from our generous donors.</string>
</resources>